--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server/index.js",
-    "build": "npm install  && npm install  --prefix client && npm run build --prefix client",
+    "build": "cd server && npm install  && cd ../client && npm install && npm run build",
+    "start": " TG_ALLOW_MIXED=ALLOW node backend/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
