--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "cd server && npm install  && cd ../client && npm install && npm run build",
-    "start": " TG_ALLOW_MIXED=ALLOW node backend/server.js",
+    "start": " TG_ALLOW_MIXED=ALLOW node server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
